conversation block done.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -34,5 +34,7 @@
     <string name="Setting">設定</string>
     <string name="Talking">Talking(圖)</string>
     <string name="Listening">Listeming(圖)</string>
+    <string name="name1">台南的爛滑鼠</string>
+    <string name="content">4444</string>
 
 </resources>
