--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,15 +7,26 @@
 
     <color name="yellow_Banana">#FFFF66</color>
     <color name="Brown_Banana">#731a1a</color>
-
+	<color name="yellow_Gold">#FFD700</color>
     <string name="title_activity_talking_my_fragment">Talking_Activity</string>
     <string name="title_activity_setting_my_fragment">Setting_MyFragment</string>
     <string name="title_activity_listening_my_fragment">Listening_MyFragment</string>
 
+    
+    <!-- 主題的色彩  -->
+    <color name="Banana">#FFD700</color>
+    <color name="Banana_Brown">#731a1a</color>
+    <color name="Banana_White">#FFFFFF</color>
+    <color name="Banana_Gray">#E8E8E8</color>
+    <color name="Banana_Gray_dark">#D4D4D4</color>
+    
+    
+    
     <color name="Blue">#1719ff</color>
     <color name="Green">#19ff1c</color>
     <color name="Red">#FF1c19</color>
-
+    <color name="Black">#000000</color>
+    
     <string name="open">open</string>
     <string name="close">close</string>
     <string name="action_refresh">重新整理</string>
