Reply to specific article and fix viewpager bug.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -110,6 +110,8 @@
     <string name="yes">確定</string>
     <string name="no">取消</string>
     <string name="post">分享</string>
+    <string name="reply">回覆</string>
+    
     <string name="test">ddsdlkjs;dk;klf;fljk;alkfja;kfja;lsjkfl;ajkfkajfl;anvnzmcnzowieupoqwueqiuyeufhslkjlksnc;zlckxnlk</string>
     
     
