--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -112,7 +112,17 @@
     <string name="post">分享</string>
     <string name="reply">回覆</string>
     
-    <string name="test">ddsdlkjs;dk;klf;fljk;alkfja;kfja;lsjkfl;ajkfkajfl;anvnzmcnzowieupoqwueqiuyeufhslkjlksnc;zlckxnlk</string>
+    <!-- login layout  -->
+    <string name="login_title">Login</string>
+    <string name="login_user_id">帳號</string>
+    <string name="login_username">Username</string>
+    <string name="login_password">密碼</string>
+    <string name="login_passtext">Password</string>
+    <string name="Login_login">登入</string>
+    <string name="Login_register">註冊</string>
+    <string name="login_try">試玩看看</string>
+    <string name="login_introduce">感謝你安裝本程式，趕快來體驗SecretTalk吧！</string>
+    
     
     
     
@@ -142,7 +152,7 @@
     <string name="name1">台南的爛滑鼠</string>
     <string name="content">4444</string>
     
-	 <string name="title_activity_login">LoginActivity</string>
+	<string name="title_activity_login">LoginActivity</string>
     <string name="Login_LoginTitle">Login Page</string>
     <string name="Login_Username">Username</string>
     <string name="Login_Password">Password</string>
