--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -49,6 +49,7 @@
     
     <string name="Setting_sign_english">Sign</string>
     <string-array name="Setting_sign_english_array">
+        <item>Aries</item>
         <item>Taurus</item>
         <item>Gemini</item>
         <item>Cancer</item>
@@ -65,17 +66,18 @@
     <string name="Setting_sign">星座 :</string>
     <string name="prompt">請選擇您的星座</string>
     <string-array name="Setting_sign_array">
-        <item>金牛座 Taurus 03/21~04/19</item>
-        <item>雙子座 Gemini 04/20~05/20</item>
-        <item>巨蟹座 Cancer 05/21~06/21</item>
-        <item>獅子座 Leo 06/22~07/22</item>
-        <item>處女座 Virgo 07/23~08/22</item>
-        <item>天秤座 Libra 09/23~10/23</item>
-        <item>天蠍座 Scorpio 10/24~11/22</item>
+        <item>白羊座 Aries		03/21~04/19</item>
+        <item>金牛座 Taurus	04/20~05/20</item>
+        <item>雙子座 Gemini	05/21~06/21</item>
+        <item>巨蟹座 Cancer	06/22~07/22</item>
+        <item>獅子座 Leo		07/23~08/22</item>
+        <item>處女座 Virgo		08/23~9/22</item>
+        <item>天秤座 Libra 	09/23~10/23</item>
+        <item>天蠍座 Scorpio	10/24~11/22</item>
         <item>射手座 Sagittarius 11/23~12/21</item>
         <item>魔羯座 Capricorn 12/22~01/19</item>
-        <item>水瓶座 Aquarius 01/20~02/18</item>
-        <item>雙魚座 Pisces 02/19~03/20</item>
+        <item>水瓶座 Aquarius 	01/20~02/18</item>
+        <item>雙魚座 Pisces 	02/19~03/20</item>
     </string-array>
     
     <string name="Setting_mood">心情 :</string>
@@ -155,7 +157,8 @@
     <string name="Register_boodtype">血型</string>
     <string name="Register_summit_and_register">送出註冊</string>
     <string name="Register_cancel">取消</string>
-    
+    <string name="Register_spinner_prompt">請選擇你的星座</string>
+    <string name="Register_spinner_prompt_bloodtype">請選擇你的血型</string>
     
     
     <!--  -->
